--- a/3월 2주차/3월 8일.MD
+++ b/3월 2주차/3월 8일.MD
@@ -32,3 +32,185 @@
 
 
 코딩을... 너무어렵게 생각하지말자... 처음에 내가 아는선에서 하는게 나을수 있다.
+
+#### 로컬클래스
+메서드 안에 구현된 클래스 static 사용 불
+
+### 내부클래스
+```java
+package step5_포함관계;
+
+class A {
+	String name;
+	
+	A(String name) {
+		this.name = name;
+	}
+	
+	class B {
+		int age;
+		B() {};
+		B(int age) {
+			this.age = age;
+		}
+	}
+	
+	B getB() {
+		return new B();
+	}
+	//*********************
+	static class C {
+		String address = "서울";
+	}	
+	//*********************
+	interface D {
+		void print();
+	}
+	//*********************
+	class E implements D {
+		
+		@Override
+		public void print() {
+			System.out.println("졸려");
+		}
+	}
+	
+	void F() {
+		class G {
+			void print() {
+				System.out.println("메서드 안에 구현된 클래스 - 로컬 클래스");
+			}
+		}
+		G g = new G(); // 메서드 안에 구현된거니까  F안에서만 구현가능함
+		g.print();
+	}
+	
+}
+
+
+public class Inher2 {
+	public static void main(String[] args) {
+		
+		//클래스
+		A a = new A("가가가");
+		
+		A.B b = a.new B(10);
+		System.out.println(b.age);
+		
+		//정적클래스 호출 방법
+		A a1 = new A("나나나");
+		A.C d = new A.C();
+		System.out.println(d.address);
+		
+		System.out.println(a.name + "님의 나이는 " + b.age +"살이고 " + d.address + "에 살고 있습니다.");
+		
+		
+		
+		A aa = new A("다다다");
+		A.E ee = aa.new E();
+		ee.print();
+		
+	}
+}
+```
+
+
+### 중첩클래스 사용하면 코드를 간결하게 할 수 있다
+```java
+package step5_포함관계;
+
+class Outer {
+	private int num = 10;
+	private static int sNum = 20;
+	String name = "아우터";
+	
+	
+	public class Inner {
+		int score = 10;
+		void print() { // 오옹 좋다
+			System.out.println("재밌습니다.");
+			System.out.println(num);
+			System.out.println(sNum);
+			System.out.println(name);
+		}
+	}
+}
+
+public class Inner3 {
+	public static void main(String[] args) {
+		
+		//실습	
+		Outer o = new Outer();
+		
+		Outer.Inner a = o.new Inner();
+		a.print(); 
+	}
+}
+
+```
+
+### 내부객체를 이용하는 3가지 방법
+```java
+package step5_포함관계;
+
+class Outer2 {
+	int width;
+	int height;
+	
+	Inner2 inner2;
+	public Outer2(int width,int height ,int dept) {
+		this.width = width;
+		this.height = height;
+		inner2 = new Inner2(dept);
+	}
+	
+	
+	public Outer2(int width, int height) {
+		this.width = width;
+		this.height = height;
+	}
+	
+	class Inner2 {
+		int depth;
+		
+		Inner2(int depth) {
+			this.depth = depth;
+		}
+		
+		public int volume() {
+			return width*height*depth;
+		}
+	}
+	
+	// 내부객체를 변환하는 메서드 getInner()를 구현하시오.
+	
+	Inner2 getInner2(int i) {
+		return new Inner2(i); // 아 값 넣어줘야겠네
+	}
+}
+
+public class Inner4Ex {
+	public static void main(String[] args) {
+		
+		// 객체생성
+		Outer2 outer2 = new Outer2(10, 20);
+		Outer2.Inner2 i = outer2.new Inner2(30);
+		System.out.println(i.volume());
+		
+		// 메서드 이용 객체생성
+		// 잘 보기!!
+//		Outer2.Inner2 oi2 = outer3.getInner2(50);
+//		System.out.println(oi2.volume());
+		
+		Outer2 outer3 = new Outer2(30, 40);
+		Outer2.Inner2 o2 = outer3.getInner2(50);
+		System.out.println(o2.volume());
+		
+		// 생성자
+		Outer2 out3 = new Outer2(30, 70, 90);
+		int a = out3.inner2.volume();
+		System.out.println(a);
+		
+	}
+}
+```
