--- a/3월 2주차/3월 8일.MD
+++ b/3월 2주차/3월 8일.MD
@@ -34,9 +34,9 @@
 코딩을... 너무어렵게 생각하지말자... 처음에 내가 아는선에서 하는게 나을수 있다.
 
 #### 로컬클래스
-메서드 안에 구현된 클래스 static 사용 불
+메서드 안에 구현된 클래스 static 사용 불가
 
-### 내부클래스
+## 내부클래스
 ```java
 package step5_포함관계;
 
@@ -214,3 +214,12 @@ public class Inner4Ex {
 	}
 }
 ```
+
+## 익명클래스(익명객체) _ anonymouse
+- 객체를 생성할 때 클래스이 이름이 없는 경우를 말한다.
+- 객체를 매개변수로 전달하는 경우, 자신의 객체를 실행하는 것으로 끝나는 경우, 인터페이스를 직접 구현하는 경우에 활용된다.
+
+- ***익명클래스는 기존의 클래스를 편집하여 활용할 수 있다.***
+필드나 메소드를 추가할 수 있다. 단, 그 안에서만 접근하여 활용할 수 있다.
+
+기존에 있던 메서드는 Override해서 재정의하여 활용 할 수도 있다.
