--- a/3월 2주차/3월 8일.MD
+++ b/3월 2주차/3월 8일.MD
@@ -362,3 +362,103 @@ public class Anonymous3_Lamda {
 }
 
 ```
+
+### 마지막 머리 식히기 ( 별 움직이기 )
+```java
+package step6_익명클래스;
+
+import java.awt.Color;
+import java.awt.Component;
+import java.awt.Container;
+import java.awt.event.KeyEvent;
+import java.awt.event.KeyListener;
+import java.awt.event.MouseEvent;
+import java.awt.event.MouseListener;
+
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+
+public class Anonymous4_Move extends JFrame {
+	
+	private final int FLYING_UNIT = 10;
+	private JLabel la = new JLabel("★");
+	
+	public Anonymous4_Move() {
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		
+		Container c = getContentPane();
+		c.setBackground(Color.yellow);
+		c.setLayout(null);
+		c.addKeyListener(new MyKeyListener());
+		
+		la.setLocation(50, 50);
+		la.setSize(100, 20);
+		c.add(la);
+		
+		setSize(1500, 800);
+		setVisible(true);
+		c.setFocusable(true);
+		c.requestFocus();
+		
+		c.addMouseListener(new MouseListener() {
+			
+			@Override
+			public void mouseReleased(MouseEvent e) {}
+			
+			@Override
+			public void mousePressed(MouseEvent e) {}
+			
+			@Override
+			public void mouseExited(MouseEvent e) {}
+			
+			@Override
+			public void mouseEntered(MouseEvent e) {}
+			
+			@Override
+			public void mouseClicked(MouseEvent e) {
+				Component com = (Component)e.getSource();
+				com.setFocusable(true);
+				com.requestFocus();
+				
+			}
+		});
+	
+	}
+	
+	class MyKeyListener implements KeyListener {
+
+		@Override
+		public void keyTyped(KeyEvent e) {}
+
+		@Override
+		public void keyPressed(KeyEvent e) {
+			int keycode = e.getKeyCode();
+			switch(keycode) {
+			case KeyEvent.VK_UP:
+				la.setLocation(la.getX(), la.getY()-FLYING_UNIT);
+				break;
+			case KeyEvent.VK_DOWN:
+				la.setLocation(la.getX(), la.getY()+FLYING_UNIT);
+				break;
+			case KeyEvent.VK_LEFT:
+				la.setLocation(la.getX()-FLYING_UNIT, getY());
+				break;
+			case KeyEvent.VK_RIGHT:
+				la.setLocation(la.getX()+FLYING_UNIT, getY());
+				break;
+			}
+			
+		}
+
+		@Override
+		public void keyReleased(KeyEvent e) {}
+		
+	}
+	
+	public static void main(String[] args) {
+		new Anonymous4_Move();
+	}
+	
+}
+
+```
