--- a/3월 2주차/3월 9일.MD
+++ b/3월 2주차/3월 9일.MD
@@ -1,12 +1,36 @@
 ### Review
-추상
-- 메소드의 구현부만 있는 것을 추상 메소드라고 한다.
+내부 클래스
+- 클래스 안에 클래스를 구현한 것
+- 1) 직접생성
+```java
+//클래스
+Outer out = new Outer();
+Outer.Inner inner = out.nex Inner();
+
+// static클래스
+Outer out = new Outer();
+Outer.Inner = nex Outer.Inner();
+```
+- 2) 생성자를 통해 생성
+- 3) getInstance() 메서드를 통해 접근
+
+람다 표현식 함수
+- 하나의 메서드를 갖고 있는 인터페이스를 구현 할 때 유용하다.
+- (매개변수, 매개변수) -> { 실행문; return }
+- (매개변수, 매개변수) -> 실행문                  실행문 하나일떄 {}생략가능,return문 생략가능
+- 호출 : 객체변수.메드()
 
 
 ## 오늘의 학습목표
 학습 내용
-- ***내부클래스*** 를 이해하고 구현할 수 있다.
+- ***익명클래스*** 를 이해하고 구현할 수 있다.
+- ***기본API의 주요 메서드***를 이해하고 활용할 수 있다.
 
 
 공지사항
-- 포트폴리오
+- 3.10 06:30~ 클래스 보강
+- 포트폴리오 3.10
+
+
+
+
