--- a/3월 2주차/3월 9일.MD
+++ b/3월 2주차/3월 9일.MD
@@ -32,5 +32,153 @@ Outer.Inner = nex Outer.Inner();
 - 포트폴리오 3.10
 
 
+--------------------------------------------------------------------------------------------------
+
+https://docs.oracle.com/javase/10/docs/api/overview-summary.html
+- 자바에서 매우 중요
+
+
+- 메서드 안에 만들어진 생성자는 메서드 안에서만 사용가능하다.
+- 졸려서 그랬나.. 한번씩 간단한걸 놓치는거 같다
+```java
+package step6_익명클래스;
+
+/*
+	. 필드 - 전역변수
+	. 메서드 안에서 - 지역변수
+	. main() 넘겨줄때 - 의존성주입 (DI)
+
+*/
+
+class Person {
+	String name = "홍길동";
+	void wake() {
+		System.out.println("7시에 일어납니다.");
+	}
+	void eat() {
+		System.out.println("점심을 먹습니다.");
+	}
+}
+
+class Child extends Person {
+//	Person field;
+//	
+//	public Child(Person p) {
+//		field = p;
+//	}
+
+	
+	void method1() {
+//		field.wake();
+//		field.eat();
+//		field.str = "김길동";
+//		field.work();
+//		field.hobby();      신규로 만든것들은 안됨
+		
+	}
+	
+	void method2() {
+		Person local = new Person() {
+			String str = "가가";
+			void work() {
+				System.out.println("출근합니다.");
+			}
+			void hobby() {
+				System.out.println(name+ "님은 " + str + "님과 음악취미가 같습니다.");
+			}
+			@Override
+			void wake() {
+				System.out.println("10시에 일어납니다.");
+			}
+			@Override
+			void eat() {
+				System.out.println("저녁을 먹습니다.");
+				work();
+				hobby();
+			}
+		};
+		
+		local.wake();
+		local.eat();
+		local.str = "김길동"; // local이야 메서드 안에서 만들어졌으니 wake나 eat은 사용할 수 있는데, str같은건 local 안에서 만들어졌으니 사용불가
+//		local.work();
+//		local.hobby();     // 신규로 만든것들은 안됨
+		
+		// 메서드 안에서 만들어졌던 생성자가 메서드 밖에서 클래스 안에 있는 메서드를 어떻게 사용하는거지?
+		// 메서드 안에 있나... 아침이라 졸린가보다	
+	}
+	
+	void method3(Person p) {
+		
+	}
+
+}
+
+public class Anonymous5_Class {
+	public static void main(String[] args) {
+		
+		Child ch = new Child();
+		ch.method3(new Person() {
+			String str = "나나나";
+			void study() {
+				System.out.println("무엇이든 잘합니다.");
+			}
+			@Override
+			void eat() {
+				System.out.println(name + "님은 " + str +  "님과 맛있는걸 먹습니다.");
+				study();
+			}	
+		});	
+	}
+}
+
+```
+
+## API 구성
+모듈
+- ***여러 패키지와 이미지 등의 자원을 모아 놓은 컨테이너***
+- JDK 9부터 자바 API의 모든 클래스들(자바 실행 환경)을 패키지 기반에서 모듈들로 완전히 재구성
+- 응용프로그램 역시 여러 개의 모듈로 분할하여 작성 가능
+
+>> 클래스들은 패키지로 만들고, 다시 패키지를 모듈로 만듦
+
+패키지
+- 서로 관련된 클래스와 인터페이스의 컴파일 된 클래스 파일들을 하나의 디렉터리에 묶어 놓은 것
+
+패키지명과 클래스의 경로명
+- ***점(.)으로 연결***
+- Project.FileIO.Tools.class  , ProjectUI.Tools.class
+ 
+주요패키지
+- ***java.lang***
+1) 자바 language 패키지 ( 스트링, 수학함수, 입출력 등 자바 프로그래밍에 필요한 기본적인 클래스와 인터페이스)
+2) 자동으로 import, import 문 필요 없음
+- java.util
+1) 자바 유틸리티 패키지 (날짜, 시간, 백터, 해시맵 등과 같은 다양한 유틸리티 클래스와 인터페이스 제공)
+
+- java.io
+1) 키보드, 모니터, 프린터, 디스크 등에 입출력을 할 수 있는 클래스와 인터페이스 제공
+
+- java.awt
+1) 자바 GUI 프로그래밍을 위한 클래스와 인터페이스 제공
+
+-javax.swing
+1) 자바 GUI 프로그래밍을 위한 스윙 패키지
+
+
+## Object 클래스
+- java.lang 패키지
+- ***모든 클래스의 슈퍼 클래스***
+1) 모든 클래스에 강제 상속
+2) 모든 객체가 공통으로 가지는 객체의 속성을 나타내는 메서드 보유
+메서드 : (boolean equals(Object obj)), (Class getClass()), (int hashCode()), (String toString())
+(void notify()), (void notifyAll()), (void wait())
+
+
+
+
+
+
+
 
 
