--- a/3월 2주차/3월 9일.MD
+++ b/3월 2주차/3월 9일.MD
@@ -37,6 +37,10 @@ Outer.Inner = nex Outer.Inner();
 https://docs.oracle.com/javase/10/docs/api/overview-summary.html
 - 자바에서 매우 중요
 
+플롯표현
+
+
+float[] arr3 = new float[] {1.2f, 3.5f, 5.1f};
 
 - 메서드 안에 만들어진 생성자는 메서드 안에서만 사용가능하다.
 - 졸려서 그랬나.. 한번씩 간단한걸 놓치는거 같다
@@ -175,6 +179,79 @@ public class Anonymous5_Class {
 (void notify()), (void notifyAll()), (void wait())
 
 
+### object
+```java
+package object;
+
+class Rect {
+	// 너비, 높이
+	// 생성자로 초기화시킨다
+	
+	// equals(Object obj) 이용해서 
+	//  너비*높이  == obj.width * obj.height 같다면 true, 다르면 false
+	
+	int width;
+	int height;
+	
+	Rect(int width, int height) {
+		this.width = width;
+		this.height = height;
+	}
+	
+	public boolean equals(Rect r) {
+		if(width == r.width && height == r.height)
+			return true;
+		else
+			return false;
+	}
+}
+
+public class Obj4 {
+	public static void main(String[] args) {
+		
+		Rect a = new Rect(10, 20);
+		Rect b = new Rect(10, 20);
+		Rect c = new Rect(10, 30);
+		
+		if(a.equals(b)) {
+			System.out.println("a와 b는 같다");
+		} else {
+			System.out.println("a와 b는 다르다");
+		}
+		
+		if(a.equals(c)) {
+			System.out.println("a와 c는 같다");
+		} else {
+			System.out.println("a와 c는 다르다");
+		}	
+	}
+}
+```
+
+## Wrapper 클래스
+- 이름이 Wrapper인 클래스는 존재하지않음 (Byte Short Integer Long 등등등 같은것)
+- 용도
+1) 기본타입의 값을 객체로 다룰 수 있게 함
+
+## String 클래스
+- 스트링 객체는 수정 불가능 스트링
+- 비교 시 반드시 equals()를 사용 - equals()는 내용을 비교하기 때문
+
+방법1: 스트링 리터럴로 스트링 객체 생성
+```java
+String str1 = "abcd";
+```
+
+방법2: String 클래스의 생성자를 이용하여 스트링 생성
+```java
+char data[] = {'a','b','c','d'};
+String str2 = new String(data);
+String str3 = new String("abcd");
+```
+
+
+## StringBuffer클래스
+가변 크기의 문자열 저장 클래스
 
 
 
@@ -182,3 +259,70 @@ public class Anonymous5_Class {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------------------------------
+
+# 문제 
+```java
+package string;
+
+import java.util.Arrays;
+import java.util.Scanner;
+
+public class S6_EX {
+	public static void main(String[] args) {
+		
+		// 문자열을 스캐너를 통해서 입력합니다.
+		// nextLine()
+		// 문자열 길이 출력하고
+		
+		// 받은 문자열을 한글자씩 회전시킨다.
+		
+		// LOVE FOREVER
+		// OVE FOREVERL
+		// VE FOREVERLO
+		// E FOREVERLOV
+		
+		Scanner sc = new Scanner(System.in);
+		String a = sc.nextLine();
+
+		
+		System.out.println(a.length());
+		
+//		char[] arr = new char[a.length()];
+//		
+//		for (int i=0;i<a.length();i++) {
+//			arr[i] += a.charAt(i);
+//		}
+//		System.out.println(Arrays.toString(arr));
+		
+//		b += a.substring(1, a.length()-1);
+
+		String[] b = new String [a.length()-1];
+		
+		for(int i=0;i<a.length();i++) {
+			b = "";
+			for(int j=0;j<a.length();j++) {
+				b = a.substring(1, a.length()) + a.charAt(0);
+			}
+		}
+		System.out.println(b);
+		
+		
+		
+		
+	}
+}
+
+```
