--- a/3월 2주차/3월 9일.MD
+++ b/3월 2주차/3월 9일.MD
@@ -253,27 +253,99 @@ String str3 = new String("abcd");
 ## StringBuffer클래스
 가변 크기의 문자열 저장 클래스
 
+## StringTokenizer클래스
+- java.util.StringTokenizer
+1) 하나의 문자열을 여러 문자열로 분리
+2) 문자열을 분리할 때 사용되는 기준 문자: 구분 문자(delimiter)
+- ***토큰***(tokne) : 구분 문자로 분리된 문자
+
+```java
+package stringtokenizer;
+
+import java.util.StringTokenizer;
+
+public class Token1 {
+	public static void main(String[] args) {
+		
+		String query = "name=홍길동&address=신촌&age=21";
+		
+		StringTokenizer st = new StringTokenizer(query, "&");
+		
+		int n = st.countTokens();
+		System.out.println("분리된 토큰은 몇개인가? " + n + "개");
+		
+		for(int i=0;i<n;i++) {
+			String token = st.nextToken();
+			System.out.println(token);
+		}
+		
+	}
+}
+
+```
+
+## Math클래스
+난수 발생
+- static double random()
+1) 산술 연산 메서드 제공 java.lang.Math
+2) 모든 메서드는 static 타입 : 클래스 이름으로 바로 호출해야 
 
 
+## Calendar 클래스
+Calendar 클래스의 특징
+- java.util 패키지
+- 시간과 날짜 정보 저장 관리
+1) 년, 월, 일, 요일, 시간, 분, 초, 밀리초, 오전, 오후 등
+2) Calendar 클래스의 각 시간 요소를 설정하거나 알아내기 위한 필드
 
 
+- 어쩌다 알게된건데 AM_PM을 HOUR ( AM_PM + HOUR을 객체로 넣으면 ) +1이 돼서 출력됨
+```java
+package calendar;
 
+import java.util.Calendar;
 
+public class Calendar1 {
+	public static void main(String[] args) {
+		
+		Calendar now = Calendar.getInstance(); // 싱글톤
+		int yy = now.get(Calendar.YEAR);
+		int mm = now.get(Calendar.MONTH)+1; // 0부터 시작이기에 +1 해줘야함
+		int dd = now.get(Calendar.DATE);
+		int ampm = now.get(Calendar.AM_PM);
+		int hour = now.get(Calendar.HOUR);
+//		int hourofday = now.get(Calendar.HOUR_OF_DAY);
+		int min = now.get(Calendar.MINUTE);
+		int sec = now.get(Calendar.SECOND);
+		
+		
+		
+		System.out.print(yy + "년" + mm + "월" + dd + "일 ");
+		
+		int week = now.get(Calendar.DAY_OF_WEEK); // 일요일: 1
+		
+		switch(week) {
+		case 1: System.out.print("일요일"); break;
+		case 2: System.out.print("월요일"); break;
+		case 3: System.out.print("화요일"); break;
+		case 4: System.out.print("수요일"); break;
+		case 5: System.out.print("목요일"); break;
+		case 6: System.out.print("금요일"); break;
+		case 7: System.out.print("토요일"); break;
+		}
+		
+		System.out.println(hour+"시 "+min+"분 "+sec+"초");
+	}
+}
 
-
-
-
-
-
-
-
+```
 
 
 
 
 ------------------------------------------------------------------------------------------------
 
-# 문제 
+# 문제 (성공) 
 ```java
 package string;
 
