--- a/3월 2주차/3월 10일.MD
+++ b/3월 2주차/3월 10일.MD
@@ -154,6 +154,8 @@ public class C1_ClassEx {
 JFrma 창에 현재 시간 띄우기
 
 ![현재시간](https://user-images.githubusercontent.com/111875357/224264801-d375cbe6-82e1-44a1-a330-a0eada13514f.png)
+![현재시간alert창](https://user-images.githubusercontent.com/111875357/224266485-1b227caa-4306-4a67-97bd-cf60588b463e.png)
+
 
 ```java
 package container;
@@ -167,6 +169,8 @@ import javax.swing.Timer;
 
 import javax.swing.JFrame;
 import javax.swing.JLabel;
+import javax.swing.*;
+import java.awt.event.*;
 
 public class Ex02 extends JFrame {
 	
@@ -203,10 +207,19 @@ public class Ex02 extends JFrame {
 
 		setTitle("현재 시간");
 		setSize(500, 400);
-		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
 		setLocationRelativeTo(null);
 		setVisible(true);
-        
+		
+		setDefaultCloseOperation(JFrame.DO_NOTHING_ON_CLOSE); // 창 닫기 버튼 무시
+        addWindowListener(new WindowAdapter() { // WindowListener 구현
+            public void windowClosing(WindowEvent e) {
+                int result = JOptionPane.showConfirmDialog(null, "정말로 종료하시겠습니까?", "종료", JOptionPane.YES_NO_OPTION);
+                if (result == JOptionPane.YES_OPTION) {
+                    dispose(); // 창 닫기
+                    System.exit(0); // 프로그램 종료
+                }
+            }
+        });
     }
 	
 	public static void main(String[] args) {
