--- a/3월 3주차/3월 14일.MD
+++ b/3월 3주차/3월 14일.MD
@@ -6,18 +6,6 @@
 - ISP(Interface Segregation Principle) : 인터페이스 분리 원칙
 - DIP(Dependency Inversion Principle) : 의존 역전 원칙
 
-Generic 클래스 ( 일반화 - 구체화 )
-
-
-## 오늘의 학습목표
-- 학습내용 :
-1) 클래스 안에 변수, 생성자, 메소드의 종류와 특징을 이해
-
-- 공지사항 : 포트폴리오
-
-
-------------------------------------------------------------------------------------------------------------------------
-
 ### 1.SRP(Single Responsibility Principle) : 단일 책임 원칙
 - 어떤 클래스를 변경해야 하는 이유는 오직 하나 뿐이어야 한다.
 - 작성된 클래스는 하나의 기능만 가지며, 클래스가 제공하는 모든 서비스는 그 하나의 책임을 수행하는 데 집중되어 있어야 한다는 원칙
@@ -29,3 +17,34 @@ Generic 클래스 ( 일반화 - 구체화 )
 - 1) 변경(확장)될 것과 변하지 않을 것을 엄격히 구분한다.
 - 2) 이 두 모듈이 만나는 지점에 인터페이스를 정의한다.
 - 3) 구현에 의존하기보다 정의한 인터페이스에 의존하도록 코드를 작성한다.
+
+### 3.LSP(Liskov Substitution Principle) : 리스코프 치환 원칙
+- 서브 타입(자식)은 언제나 자신의 기반 타입(부모)으로 교체할 수 있어야 한다.
+- 상속(extends, implemets)의 원칙을 잘 지키는 것이 LSP를 잘 지키고 있는 것
+
+- LSP는 다형성과 확장성을 극대화 하려는 노력으로, 이를 위해서는 하위 클래스를 사용하는 것보다는 상위의 클래스(인터페이스)를 사용하는 것이 더 좋다.
+
+### 4.ISP(Interface Segregation Principle) : 인터페이스 분리 원칙
+- 클라이언트는 자신이 사용하지 않는 메서드에 의존 관계를 맺으면 안 된다.
+- 클래스는 자신이 사용하지 않는 인터페이스는 구현하지 말아야 한다는 원리로, 어떤 클래스가 다른 클래스에 종속될 때에는 가능한 최소한 인터페이스만 사용해야 한다는 원칙
+- 만약 어떤 클래스를 이용하는 클라이언트가 여러 개고, 이들이 해당 클래스의 특정 부분 집합만을 이용한다면, 이들을 각각 인터페이스로 빼내어 클라이언트가 기대하는 메시지 만을 전달 할 수 있어야 한다.
+
+### 5. DIP(Dependency Inversion Principle) : 의존 역전 원칙
+- 고차원 모듈은 저차원 모듈에 의존하면 안 된다. 이 두 모듈 모두 다른 추상화된 것에 의존해야 한다.
+- 추상화된 것은 구체적인 것에 의존하면 안 된다. 구체적인 것이 추상화된 것에 의존해야 한다.
+- 자신보다 변하기 쉬운 것에 의존하지 마라
+
+
+## 오늘의 학습목표
+- 학습내용 :
+1) 제네릭 컬렉션을 이용할 줄 안다.
+
+- 공지사항 : 포트폴리오
+
+
+------------------------------------------------------------------------------------------------------------------------
+
+
+
+
+
