--- a/3월 3주차/3월 13일.MD
+++ b/3월 3주차/3월 13일.MD
@@ -1,1 +1,30 @@
 예비군으로 불참 ( 제네릭, 라이브러리 추가 공부했다고 했음, USB에 파일 받음 )
+
+```java
+class Queue<T> {
+	T[] push (T[] data) { // T --> String, Integer, Double,,, 객체맨 객체
+		for(int i=0; i<data.length;i++) {
+			data[i] = (T)("학습" + i);
+		}
+		return data;
+	}
+	
+	void pop(T[] data) {
+		for(int i=0;i<data.length;i++) {
+			System.out.println("data["+i+"]= " +data[i]);
+		}
+	}
+	
+}
+
+public class Generic9 {
+	public static void main(String[] args) {
+		
+		
+		String[] data = new String[10];
+		Queue q = new Queue();
+		q.push(data);
+		q.pop(data);
+	}
+}
+```
