--- a/3월 3주차/3월 14일.MD
+++ b/3월 3주차/3월 14일.MD
@@ -45,6 +45,132 @@
 ------------------------------------------------------------------------------------------------------------------------
 
 
+제네릭 예제
+```java
+package generic;
+
+class Point<A,B> {
+	A x;
+	B y;
+	Point(A x, B y) {
+		this.x = x;
+		this.y = y;
+	}
+	
+	public A getX() {
+		return (A)x;
+	}
+	
+	public B getY() {
+		return (B)y;
+	}
+	
+	// 메서드
+	public <C> C print(C i) {
+		System.out.println(i);
+		C sum = i;
+		System.out.println(sum);
+		return i;
+	}
+	
+}
+
+public class Genecric10 {
+	public static void main(String[] args) {
+		
+//		Point p = new Point(10, 20);
+//		
+//		System.out.println("x: " + p.getX());
+//		System.out.println("y: " + p.getY());
+		
+		// 1. x:정수, y:실수
+		// 2. x:실수, y:정수
+		// 3. x:실수, y:실수
+		
+		Point <Integer, Double> p2 = new Point(3, 3.14);
+		System.out.println(p2.getX() + " " + p2.getY());
+		
+		p2.<String>print("1000");
+		p2.<Integer>print(5000);
+		
+	}
+}
+```
+
+제네릭에서 toSTring, parseDouble 이용 계산 메서드
+```java
+public <C> C cal(String x, String y) {
+		Double sum = Double.parseDouble(x) + Double.parseDouble(y);
+		return (C)(Double.toString(sum));
+	}
+```
 
 
+상속을 이용한 제네릭 예제
+```java
+package generic;
 
+abstract class Material22 {
+	abstract void doPrinting();
+}
+
+class Powder22 extends Material22 {
+
+	@Override
+	void doPrinting() {
+		System.out.println("재료: Powder");
+	}
+	
+}
+
+class Plastic22 extends Material22 {
+
+	@Override
+	void doPrinting() {
+		System.out.println("재료: Plastic");
+	}
+	
+}
+
+// 3D프린터
+class Printer2<T extends Material22> { // <T> extends Powder
+									 // <T extends Powder>
+	
+	
+	private T material;
+	
+	public void setMaterial(T material) {
+		this.material = material;
+	}
+	public T getMaterial() {
+		System.out.println("난 파우더 프린트야");
+		return material;
+	}
+	
+	// 메서드 추가
+	public void printing() {
+		material.doPrinting();  //상속받은 부모의 메서드
+	}
+	
+}
+
+
+public class Generic12 {
+	public static void main(String[] args) {
+		
+		// 1.Powder 프린터
+		Printer2 <Powder22> gPrinter = new Printer2();
+		
+		gPrinter.setMaterial(new Powder22());
+		gPrinter.printing();
+		
+		
+		Printer2 <Plastic22>  pPrinter = new Printer2();
+		
+		pPrinter.setMaterial(new Plastic22());
+		pPrinter.printing();
+
+	}
+}
+
+```
