--- a/3월 3주차/3월 14일.MD
+++ b/3월 3주차/3월 14일.MD
@@ -174,3 +174,189 @@ public class Generic12 {
 }
 
 ```
+
+---------------------------------------------------------------------------------------------------------
+
+## Collection Framework
+
+### ArrayList
+```java
+package collection;
+
+import java.util.ArrayList;
+
+public class ArrayList1 {
+	public static void main(String[] args) {
+		
+		// 객체생성
+		ArrayList<String> arr = new ArrayList<>();
+		
+		// 요소입력
+		arr.add(new String("라면"));
+		arr.add("바이");
+		arr.add("오카");
+		
+		// 읽어오기
+//		System.out.println(arr.get(0));
+//		System.out.println(arr.get(1));
+//		System.out.println(arr.get(2));
+		
+		// 크기 알아보기
+//		System.out.println("크기: " + arr.size());
+		
+		
+		// 제거
+		arr.remove(0);
+//		System.out.println(arr.get(0)); // 젤 첫번째가 지워지면서 하나씩 앞당겨짐
+		
+		// 중간삽입
+		arr.add(1, "아아아아아아");
+		arr.add(1, "아이이이잉으으으ㅡㅇ");
+		for(int i=0; i<arr.size(); i++) {
+			System.out.println(arr.get(i));
+		}
+		
+		
+	}
+}
+
+```
+
+### ArrayList 사용 학생 등록,조회 ( 객체지향 알아보기 좋았음 )
+```java
+package collection;
+
+import java.util.ArrayList;
+import java.util.Scanner;
+import java.util.Vector;
+
+
+class Student {
+	private String name;
+	private String tel;
+	private String address;
+	
+	
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public String getTel() {
+		return tel;
+	}
+	public void setTel(String tel) {
+		this.tel = tel;
+	}
+	public String getAddress() {
+		return address;
+	}
+	public void setAddress(String address) {
+		this.address = address;
+	}
+	
+}
+
+class Register {
+	Student p = new Student();
+	
+	// 등록하기() - 입력받아서 객체를 반환
+	Student registering() {
+		System.out.println("학생을 등록합니다. 자료를 입력해주세요*****");
+		System.out.println("이름>>");
+		p.setName(ArrayList1.sc.next());
+		System.out.println("연락처>>");
+		p.setTel(ArrayList1.sc.next());
+		System.out.println("주소>>");
+		p.setAddress(ArrayList1.sc.next());
+		
+		return p;
+		
+	}
+	
+}
+
+
+
+// 학생객체생성 클래스
+public class ArrayList1 {
+	
+	static ArrayList<Student> file = new ArrayList<Student>(); 
+	static Scanner sc = new Scanner(System.in);
+	
+	// ArrayList에 학생객체를 추가하기
+	public static void insert(Student st) {
+		file.add(st);
+	}
+	
+	// ArrayList에서 조회하기
+	public static void read(String name) {
+		for(int i=0; i<file.size(); i++) {
+			if(name.equals(file.get(i).getName())) {
+				System.out.println("학생을 찾았습니다...");
+				System.out.println(file.get(i).getName());
+				System.out.println(file.get(i).getTel());
+				System.out.println(file.get(i).getAddress());
+			} else {
+				System.out.println("찾는 학생이 존재하지 않습니다.");
+			}
+		}
+		
+		
+		
+	}
+	
+	// ArrayList에서 조회하기
+	public static void main(String[] args) {
+		
+		System.out.println("학생관리 프로그램을 시작합니다.....");
+		String answer;
+		
+		while(true) {
+			System.out.println("메뉴를 선택해 주세요(1:학생등록, 2:학생검색, 3:종료)");
+			int menu = sc.nextInt();
+			
+			switch(menu) {
+			case 1:
+				while(true) {
+					Register res = new Register();
+					Student st = res.registering();
+					insert(st);
+					
+					System.out.println("계속하시겠습니까? (y/n)");
+					answer = sc.next();
+					if(answer.equals("n")) {
+						System.out.println("학생 등록을 종료합니다.");
+						break;
+					}
+					
+				}
+				break;
+			case 2:
+				while(true) {
+					System.out.println("검색할 학생이름을 입력하세요>>");
+					String name = sc.next();
+					read(name);
+					
+					System.out.println("학생 검색을 계속하시겠습니까?(y/n)");
+					answer = sc.next();
+					if(answer.equals("n")) {
+						break;
+					}
+				}
+			case 3: break;
+			}
+			System.out.println("업무를 계속하시겠습니까?(y/n)");
+			answer = sc.next();
+			if(answer.equals("n")) {
+				sc.close();
+				break;
+			}
+		}
+		System.out.println("프로그램을 종료합니다...");
+	}
+}
+
+```
+
