--- a/3월 3주차/3월 14일.MD
+++ b/3월 3주차/3월 14일.MD
@@ -360,3 +360,150 @@ public class ArrayList1 {
 
 ```
 
+Vector 객체생성 ( 임의의 x,y 5개 숫자 넣은 후 출력 )
+```java
+package collection;
+
+import java.util.Arrays;
+import java.util.Scanner;
+import java.util.Vector;
+
+class Point {
+
+	
+	private int x, y;
+	public Point(int x, int y) {
+		this.x = x;
+		this.y = y;
+	}
+	
+	public int getX() {
+		return x;
+	}
+	public void setX(int x) {
+		this.x = x;
+	}
+	public int getY() {
+		return y;
+	}
+	public void setY(int y) {
+		this.y = y;
+	}
+	
+}
+
+//class Res {
+//	Point p;
+//	
+//	Point res() {
+//		System.out.println("x값을 입력하세요.");
+//		p.setX(Vector2.sc.nextInt());
+//		
+//		System.out.println("y값을 입력하세요.");
+//		p.setY(Vector2.sc.nextInt());
+//		
+//		return p;
+//	}
+//}
+
+public class Vector2 {
+
+	static Scanner sc = new Scanner(System.in);
+	
+	static Vector<Point> v1 = new Vector<>();
+	
+//	public static void insert(Point r) {
+//		v1.add(r);
+//	}
+
+	public static void main(String[] args) {
+
+		// 벡터를 생성해서
+		// 임의의 x,y값을 갖는 Point객체 5개를 저장하고
+		// 전체를 출력해 보세요
+		
+		Point p1 = new Point(10, 20);
+		Point p2 = new Point(10, 20);
+		Point p3 = new Point(10, 20);
+		Point p4 = new Point(10, 20);
+		Point p5 = new Point(10, 20);
+		
+		v1.add(p1);
+		v1.add(p2);
+		v1.add(p3);
+		v1.add(p4);
+		v1.add(p5);
+		
+		for(int i=0;i<v1.size();i++) {
+			Point p = v1.get(i); // 새롭게 객체 생성해서 주소값을 안나오게함
+			System.out.println(p.getX());
+			System.out.println(p.getY());
+			System.out.println("**********");
+		}
+		
+//		Res res = new Res();
+//		Point point = res.res();
+//		insert(point);
+		
+
+
+	}
+
+}
+	
+
+```
+
+
+### set, hashset
+```java
+package collection;
+
+import java.util.Arrays;
+import java.util.HashSet;
+
+/*
+	ArrayList/Vector ( List를 상속받은 클래스 )
+		. 순서가 있고 중복을 허용한다.
+	
+	Set( 인터페이스 ) 을 구현한 HashSet
+		. 순서에 상관없이 중복을 허용하지 않는다.
+	
+*/
+
+public class Set1 {
+	public static void main(String[] args) {
+		
+		HashSet<String> h = new HashSet<String>();
+		
+		h.add(new String("김주호"));
+		h.add("가가가");
+		h.add("나나나");
+		h.add("다다다");
+		h.add("가가가");
+		
+		System.out.println(h);
+		
+//		for(String s: h) {
+//			System.out.println(s);
+//		}
+		
+	}
+}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
