--- a/3월 3주차/3월 14일.MD
+++ b/3월 3주차/3월 14일.MD
@@ -493,7 +493,49 @@ public class Set1 {
 
 ```
 
+### HashSet
+```java
+package collection;
 
+import java.util.HashSet;
+import java.util.Iterator;
+
+public class Set2 {
+	public static void main(String[] args) {
+		HashSet<Student> hs = new HashSet<Student>();
+		
+		Student st1 = new Student();
+		st1.setName("홍길동");
+		st1.setTel("010-1111-2222");
+		st1.setAddress("서울시 성동구 성수동");
+		
+		hs.add(st1);
+		
+		// 출력방식1
+		for(int i=0;i<hs.size();i++) {
+			System.out.println("이름: " + st1.getName());
+			System.out.println("연락처: " + st1.getTel());
+			System.out.println("주소: " + st1.getAddress());
+		}
+		
+		System.out.println("***************");
+		
+		
+		// 출력방식2
+		Iterator<Student> it = hs.iterator();
+		
+		while(it.hasNext()) {
+			Student st = it.next();
+			System.out.println("학생이름: " + st.getName());
+			System.out.println("학생연락처: " + st.getTel());
+			System.out.println("학생주소: " + st.getAddress());
+		}
+
+			
+	}
+}
+
+```
 
 
 
