--- a/3월 3주차/3월 16일.MD
+++ b/3월 3주차/3월 16일.MD
@@ -49,10 +49,191 @@ void showAll() {
 스레드의 실행 순서는 알 수 없다.
 
 
+### JOptionPane.showInputDialog
+```java
+public class Thread4 {
+	public static void main(String[] args) {
+		String name = JOptionPane.showInputDialog("이건 뭐야~?");
+		System.out.println("이름은 " + name + " 입니다." );
+	}
+}
+```
+
+### 현재시간을 년월일 시분로 1초 단위로 출력하기
+```java
+package thread;
+
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+
+// 현재시간을 년월일 시분초로 1초 단위로 출력하시오.
+
+class Th5 extends Thread {
+	public void run() {
+		while(true) {
+			
+			SimpleDateFormat format1 = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+			Calendar time = Calendar.getInstance();
+			String format_time1 = format1.format(time.getTime());		
+			System.out.println(format_time1);
+
+			try {
+				sleep(1000);
+			} catch (InterruptedException e) {
+				System.out.println("잘못된 입력");
+			}
+		}
+	}
+}
+
+public class Thread5_ex1 {
+	public static void main(String[] args) {	
+		Th5 th5 = new Th5();
+		th5.start();
+	}
+}
+```
+
+### Runnable
+- Thread로 가져오려면 Thread2 th2 = new Thread(th1); 이런식으로 하는게 아님
+- Thread th2 = new Thread(t1); 이렇게 해야
+```java
+package thread;
+
+import java.awt.Color;
+import java.awt.Container;
+import java.awt.FlowLayout;
+import java.awt.Font;
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JOptionPane;
+
+class TimerThread2 implements Runnable {
+	
+	JLabel timerLabel;
+	public TimerThread2(JLabel timerJLabel) {
+		this.timerLabel = timerJLabel;
+	}
+	
+	public void run() {
+
+		while(true) {		
+			SimpleDateFormat format1 = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+			Calendar time = Calendar.getInstance();
+			String format_time1 = format1.format(time.getTime());		
+			
+			timerLabel.setText(format_time1);
+			
+			try {
+				Thread.sleep(1000);
+			} catch (InterruptedException e) {
+				return;
+			}
+		}			
+	}
+	
+	String getTIme() {
+		Calendar now = Calendar.getInstance();
+		int yy = now.get(Calendar.YEAR);
+		int mm = now.get(Calendar.MONTH)+1;
+		int dd = now.get(Calendar.DAY_OF_MONTH);
+		int hour = now.get(Calendar.HOUR_OF_DAY);
+		int min = now.get(Calendar.MINUTE);
+		int second = now.get(Calendar.SECOND);
+		
+		String nowTime = yy+"년"+mm+"월"+dd+"일 "+ hour + "시" + min + "분" + second +"초";
+		return nowTime;	
+	}
+	
+}
 
 
+public class Runnable2_타이머 extends JFrame {
+	public Runnable2_타이머() {
+		setTitle("타이머");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		
+		Container c = getContentPane();
+		c.setLayout(new FlowLayout());
+		c.setBackground(Color.BLUE);
+		
+		JLabel timerLabel = new JLabel();
+		timerLabel.setFont(new Font("Gothic", Font.ITALIC, 80));
+		timerLabel.setForeground(Color.WHITE);
+		
+		c.add(timerLabel);
+		
+		setSize(600, 500);
+		setVisible(true);
+		
+		TimerThread2 th1 = new TimerThread2(timerLabel);
+		Thread th2 = new Thread(th1); // Thread 자체를 가져와야지
+		th2.start();
+		
+	}
+	
+	public static void main(String[] args) {
+		new Runnable2_타이머();
+	}
+	
+}
 
+```
 
+Thread flag처리
+```java
+package 강제종료;
+
+import javax.swing.JOptionPane;
+
+class Counter extends Thread {
+	int num = 1;
+	boolean flag = false;
+	
+	// 메서드
+	public void finish() {
+		flag = true;
+	}
+	
+	// 스레드
+	public void run() {
+		String str = JOptionPane.showInputDialog("몇 초에서 멈출까요?");
+		int i = Integer.parseInt(str);
+		
+		while(true) {
+			System.out.println(num + " ");
+			if(num % 10 == 0 ) {
+				System.out.println();
+			}
+			num++;
+			if(num==(i)) {
+				finish(); // true로 변경
+			}
+			
+			try {
+				sleep(1000);
+				if(flag==true) {
+					return;		// 강제종료처리
+				}
+			} catch (InterruptedException e) {
+				return;
+			}
+			
+		}
+	}
+ 	
+}
+
+public class ThreadStop2 {
+	public static void main(String[] args) {
+		Counter c = new Counter();
+		c.start();
+	}
+}
+```
 
 
 
