--- a/3월 3주차/3월 16일.MD
+++ b/3월 3주차/3월 16일.MD
@@ -235,16 +235,310 @@ public class ThreadStop2 {
 }
 ```
 
+### 멀티 스레드 문제점
+멀티스레드 프로그램 작성시 주의점
+- 다수의 스레드가 공유 데이터에 동시에 접근하는 경우
+- 공유 데이터의 값에 셰상치 못하녈과 발생 가능
+
+스레드 동기화
+- 멀티스레드의 공유 데이터의 동시 접근 문제 해결책
+- 공유 데이터를 접근하는 모든 스레드의 한 줄 세우기
+- 공유 데이터를 배타적으로 접근하기 위해 상호 협력(coordination)하는 것
+- sychronized
+
+
+### 공유하는 코드 synchronized 신기하다
+```java
+package 스레드제어;
+
+// 스레드가 공유하는 클래스
+class ShareBoard {
+	
+	int sum = 0;
+	
+	// 공유영역
+	synchronized public void add() {
+		int n = sum;
+		Thread.yield(); // 스레드 실행을 양보
+		n += 10;
+		sum = n;
+		System.out.println(Thread.currentThread().getName() + ":" + sum);
+	}
+	
+	public int getSum() {
+		return sum;
+	}
+}
+
+class StudentThread extends Thread {
+	ShareBoard board;
+	public StudentThread(String name, ShareBoard board) {
+		super(name);
+		this.board = board;
+	}
+	
+	@Override
+	public void run() {
+		for(int i=0; i<10; i++) {
+			board.add();
+		}
+	}
+}
+
+public class Thread3 {
+	public static void main(String[] args) {
+		ShareBoard board = new ShareBoard();
+		Thread th1 = new StudentThread("홍길동", board);
+		Thread th2 = new StudentThread("김을동", board);
+		th1.start();
+		th2.start();
+	}
+}
+```
 
 
 
+왔다갔다 객체지향 잘 배우고 잘 나타낼수 있었던 코드
+```java
+package 스레드제어;
 
+import java.awt.Color;
+import java.awt.Container;
+import java.awt.Graphics;
+import java.awt.event.KeyEvent;
+import java.awt.event.KeyListener;
 
+import javax.swing.JFrame;
+import javax.swing.JLabel;
 
+// 공유되는 라벨
+class MyLabel extends JLabel {
+	int barSize = 0;
+	int maxBarSize;
+	
+	public MyLabel(int maxBarSize) {
+		this.maxBarSize = maxBarSize;
+	}
+	
+	// 그래픽으로 그리는 메서드
+	public void paintComponent(Graphics g) {
+		super.paintComponent(g);
+		
+		g.setColor(Color.MAGENTA);
+		int width = (int)(((double)(this.getWidth()))/maxBarSize*barSize);
+		
+		if(width == 0) return;
+		g.fillRect(0, 0, width, this.getHeight());
+	}
+	
+	// 공유 - 막대바 채우는 영역
+	synchronized void fill() {
+		if(barSize == maxBarSize) {
+			try {
+				wait();	// 대기
+			} catch (Exception e) {
+				return;
+			}
+		}
+		barSize++;
+		repaint();
+		notify(); // 대기 깨움 --> 실행대기
+	}
+	
+	synchronized void consume() {
+		if(barSize == 0) {
+			try {
+				wait();
+			} catch (Exception e) {
+				return;
+			}
+		}
+		barSize--;
+		repaint();
+		notify();
+	}
+}
 
+// 공유되는 라벨을 호출하는 스레드
+class ConsumerThread extends Thread {
+	
+	MyLabel bar;
+	public ConsumerThread(MyLabel bar) {
+		this.bar = bar;
+	}
+	public void run() {
+		while(true) {
+			try {
+				sleep(200);
+				bar.consume();
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+	}
+}
 
+// 실행
+public class Thread4 extends JFrame {
+	
+	MyLabel bar = new MyLabel(100);
+	public Thread4(String title) {
+		super(title);
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		
+		Container c = getContentPane();
+		c.setLayout(null);
+		
+		bar.setBackground(Color.orange);
+		bar.setOpaque(true);
+		bar.setLocation(100, 100);
+		bar.setSize(100, 20);
+		c.add(bar);
+		
+		c.addKeyListener(new KeyListener() {
+			
+			@Override
+			public void keyTyped(KeyEvent e) {
+				// TODO Auto-generated method stub
+				
+			}
+			
+			@Override
+			public void keyReleased(KeyEvent e) {
+				// TODO Auto-generated method stub
+				
+			}
+			
+			@Override
+			public void keyPressed(KeyEvent e) { // 키를 누르면 채우겠다.
+				bar.fill();
+				
+			}
+		});
+		
+		setSize(500, 300);
+		setVisible(true);
+		c.requestFocus();
+		
+		ConsumerThread th = new ConsumerThread(bar);
+		th.start();
+		
+	}
+	
+	public static void main(String[] args) {
+		new Thread4("막대바");
+	}
+	
+}
 
+```
 
+----------------------------------------------------------------------------
+사진이 안나오네..
+```java
+package 스레드제어;
+
+import java.awt.Graphics;
+import java.awt.Image;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+import java.awt.event.MouseListener;
+import java.util.ArrayList;
+
+import javax.swing.ImageIcon;
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+
+public class Thread5 extends JFrame {
+	
+	public Thread5() {
+		GPanel p = new GPanel();
+		setContentPane(p);
+		
+		setSize(800, 600);
+		setVisible(true);
+		setFocusable(true);
+		
+	}
+	public static void main(String[] args) {
+		new Thread5();
+	}
+}
+
+class GPanel extends JPanel {
+	
+	public GPanel() {
+		setLayout(null);
+		addMouseListener(new MouseAdapter() {
+			
+			@Override
+			public void mouseClicked(MouseEvent e) {
+				BubbleTh th = new BubbleTh(e.getX(), e.getY());
+				th.start();
+			}
+		});
+	}
+	
+	// 그래픽
+	public void paintComponent(Graphics g) {
+		super.paintComponent(g);	
+		
+		ImageIcon image = new ImageIcon("image/bg.png"); // 배경
+		Image im = image.getImage();
+		g.drawImage(im, 0, 0, getWidth(), getHeight(), this);
+		repaint();
+	}
+	
+	// 스레드
+	class BubbleTh extends Thread {
+		
+		JLabel bubble;
+		ArrayList<ImageIcon> imageArr = new ArrayList<ImageIcon>();
+		
+		public BubbleTh(int bubbleX, int bubbleY) {
+			imageArr.add(new ImageIcon("image/1.png"));
+			imageArr.add(new ImageIcon("image/2.png"));
+			imageArr.add(new ImageIcon("image/3.png"));
+			imageArr.add(new ImageIcon("image/4.png"));
+			
+			int ran = (int)(Math.random()*4);
+			ImageIcon img = imageArr.get(ran);
+			
+			bubble = new JLabel(img);
+			bubble.setSize(img.getIconWidth(), img.getIconHeight());
+			bubble.setLocation(bubbleX, bubbleY);
+			add(bubble);
+			repaint();
+		}
+
+		public void run() {
+			
+			while(true) {
+				int x = bubble.getX();
+				int y = bubble.getY()-1;
+				
+				if(y<0) {
+					remove(bubble);
+					repaint();
+					return;
+				}
+				
+				bubble.setLocation(x, y);
+				repaint();
+				try {
+					sleep(50);
+				} catch (InterruptedException e) {
+					
+				}
+				
+			}
+		}
+	}
+	
+}
+
+```
 
 
 
