--- a/3월 3주차/3월 17일.MD
+++ b/3월 3주차/3월 17일.MD
@@ -1,9 +1,415 @@
 # Review
-HashMap
-- key와 value로 저장하는 자료구조이다.
+Thread
+- 생성방법 : Thread클래스, Runnable 인터페이스
+- 구현방법 : public void run() 메서드 안에 코드 작성, Thread.sleep()은 try~catch 예외처리
 
-```
+스레드 제어
+- start() : JVM에 위임
+- sleep() : 일시멈춤
+- Join() : 스레드가 종료 될 떄까지 대기
+- interrupt() : 강제종료, flag를 활용한 finish() 구현으로 종료
+- 동기화 : synchronized
+
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***스레드***를 이해하고 구현할 수 있다.
+1) ***입출력***을 이해하고 구현할 수 있다.
+2) 포트폴리오
+
+------------------------------------------------------------------------------------------------------------
+
+### 입출력
+다양한 입출력 장치 -> 입출력 일일이 구현 불가(호환성이 떨어지기에)
+
+스트림 입출력
+- 버퍼를 가지고 순차적으로 이루어지는 입출력
+
+자바의 입출력 스트림
+- 응용프로그램과 입출력 장치를 연결하는 소프트웨어 모듈
+
+스트림이란?
+- 자바에서 모든 입.출력은 스트림을 통해서 이루어 진다.
+- 양끝에 입출력장치와 자바 응용프로그램 연결
+- ***단방향***
+- 바이트 스트림의 경우 : 1바이트
+- 문자 스트림의 경우 : 문자(자바에서는 문자1개: 2바이트)
+- 선입선출 구조
+
+
+### I/O 연습
+- 스트림은 연결할 수 있다.
+- close() 로 닫아줘야
+```java
+package 스트림연결출력;
+
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class IO1_inputStream {
+	public static void main(String[] args) {
+		
+		// 스트림은 연결할 수 있다.
+		FileInputStream fis = null;  // 1바이트
+		InputStreamReader in = null; // 2바이트
+		
+		try {
+			fis = new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file2.txt");
+			in = new InputStreamReader(fis ,"utf-8");
+			
+			int c;
+			while((c=in.read()) != -1) {
+				
+				System.out.println((char)c);
+			}
+			// 아래 두개는 try문 안에다가 적기
+			fis.close();
+			in.close();
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
+
+I/O 
+```java
+package 스트림연결출력;
+
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class IO4_OutputStream {
+	public static void main(String[] args) {
+		
+		FileOutputStream fos;
+		
+		try {
+			fos = new FileOutputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file2.txt");
+			fos.write('z');
+			fos.write(72);
+			fos.write(65);
+			fos.write(80);
+			fos.write(80);
+			fos.write(89);
+			fos.write(32);
+			fos.write(74);
+			fos.write(65);
+			fos.write(86);
+			fos.write(65);
+			fos.write(33);
+			
+			System.out.println("정상적으로 파일이 생성되었습니다.");
+			fos.close();
+			
+			FileOutputStream foss = new FileOutputStream("./file/file2.txt",false); // false 새로생성 , true 추가
+			byte[] bs = new byte[26];
+			byte data = 65;
+			for(int i=0; i<bs.length;i++) {
+				bs[i] = data;
+				data++;
+			}
+			
+			// 배열을 저장
+			foss.write(bs);
+			
+			// 줄바꿈
+			foss.write(13); // CR
+			foss.write(10); // LF
+			
+			// 일부만 저장
+			foss.write(bs,2,10);
+		
+			foss.write(13);
+			foss.write(bs,1,10);
+			
+		} catch (IOException e) {
+			
+			
+		}
+		
+	}
+}
+```
+
+I/O write, read
+```java
+package 스트림연결출력;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+
+public class IO6_OutputStream {
+	public static void main(String[] args) {
+		
+		FileOutputStream fio;
+		OutputStreamWriter out;
+		
+		try {
+			// fio에 true false 걸어두면 그거에 따라 다르게 나옴
+			fio = new FileOutputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file6.txt", false);
+			out = new OutputStreamWriter(fio);
+			
+			out.write("가나다");
+			out.write("라마바");
+			
+			out.close();
+			fio.close();
+			System.out.println("파일을 저장하였습니다.");
+			
+			FileInputStream fin = new FileInputStream("C:\\\\Users\\\\1\\\\Desktop\\\\Directory-Hoony\\\\file\\\\file6.txt");
+			InputStreamReader in = new InputStreamReader(fin, "utf-8");
+			
+			int i;
+			while((i=in.read()) != -1) {
+				System.out.print((char)i);
+			}
+			
+		} catch (IOException e1) {
+			e1.printStackTrace();
+		}
+
+	
+		
+	}
+}
+```
+
+I/O copy
+```java
+package 활용;
+
+import java.io.File;
+import java.io.FileReader;
+import java.io.FileWriter;
+
+public class CopyTextFile {
+	public static void main(String[] args) {
+		
+		File src = new File("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file9.txt");  // 원본
+		File dest = new File("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file2copy.txt"); // 사본
+		
+		int c;
+		try {
+			FileReader fr = new FileReader(src);
+			FileWriter fw = new FileWriter(dest);
+			while((c=fr.read()) != -1) {
+				fw.write((char)c);
+			}
+			
+			fr.close();
+			fw.close();
+			System.out.println(src.getPath() + "를" + dest.getPath() + "에 복사하였습니다.");
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+}
+
+```
+
+I/O
+ObjectStream 이용
+```java
+package Serialization;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+
+/*
+	직렬화와 역직렬화
+		. 객체(인스턴스)가 생성된 후 객체의 변수값은 생명처럼 지속 변경된다.
+		. 객체가 생성된 후 어느 순간 그대로 저장하거나 네트워크를 통해 어느 시점의 데이터
+		     데이터를 전송하는 것...을 직렬화라 한다.
+		. 자바 내부시스템에서 사용되는 객체 또는 데이터를 외부 자바시스템에서도
+		     활용할 수 있도록 byte형태로 데이터 변환하는 기술과 바이트로된 데이터를
+		     다시 객체로 변환하는 기술(역직렬화)를 아우러서 직렬화라 한다.
+		  > JVM속의 힙메모리 영역의 객체 데이터를 바이트 형태로 변환해서 전송, 받게한다.   
+*/
+
+class Person implements Serializable {
+
+	private static final long serialVersionUID = -3355861263530529666L;
+	
+	String name;
+	String job;
+	
+	public Person() {}
+	public Person(String name, String job) {
+		this.name = name;
+		this.job = job;
+	}
+	
+	public String toString() {
+		return name + "," + job;
+	}
+	
+}
+
+public class S1_Serialization {
+	public static void main(String[] args) throws ClassNotFoundException {
+		
+		Person park = new Person("가나다", "의사");
+		Person kim = new Person("마마마", "검사");
+		
+		try {
+			// 1.스트림
+			FileOutputStream fos 
+			= new FileOutputStream("C:\\Users\\1\\Desktop\\Directory-Hoony"
+					+ "\\file\\serialization1.out");
+			ObjectOutputStream oos = new ObjectOutputStream(fos);
+			
+			// 2. 객체를 스트림에 써준다
+			oos.writeObject(park);
+			oos.writeObject(kim);
+			
+			// 3. 닫아준다
+			oos.close();
+			fos.close();
+			
+			System.out.println("Person객체를 바이트로 파일에 저장했습니다.");
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		//**********************************************************
+		try {
+			FileInputStream fis = new FileInputStream("C:\\Users\\1\\Desktop\\"
+					+ "Directory-Hoony\\file\\serialization1.out");
+			
+			ObjectInputStream ois = new ObjectInputStream(fis);
+			
+			Person p1 = (Person)ois.readObject();
+			Person p2 = (Person)ois.readObject();
+			
+			System.out.println(p1.name);
+			System.out.println(p1.job);
+			System.out.println(p2.name);
+			System.out.println(p2.job);
+			System.out.println("************");
+			System.out.println(p1.toString());
+			System.out.println(p2.toString());
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+	}
+}
+```
+
+I/O ObjectStream 이용 연습
+```java
+package Serialization;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+
+class Goods implements Serializable {
+
+	private static final long serialVersionUID = 1L;
+	String item;
+	int price;
+	String shop;
+	
+	public Goods() {}
+	
+	public Goods(String item, int price, String shop) {
+		this.item = item;
+		this.price = price;
+		this.shop = shop;
+	}
+	
+	public String toString() {
+		return "상품명: "+item+", 가격: "+price+", 제조사: "+shop;
+	}
+	
+}
+
+public class S2_Serialization {
+	public static void main(String[] args) throws ClassNotFoundException {
+		
+		Goods g1 = new Goods("사과", 1000, "gs");
+		Goods g2 = new Goods("바나나", 2000, "cu");
+		
+		try {
+			
+			FileOutputStream fos = new FileOutputStream("C:\\Users\\1\\D"
+					+ "esktop\\"
+					+ "Directory-Hoony\\file\\serialization2.out");
+			ObjectOutputStream oos = new ObjectOutputStream(fos);
+			
+			oos.writeObject(g1);
+			oos.writeObject(g2);
+			
+			oos.close();
+			fos.close();
+			
+			System.out.println("Goods객체를 바이트로 파일에 저장했습니다.");
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		// 역직렬화
+		
+		try {
+			FileInputStream fi = new FileInputStream("C:\\Users\\1\\"
+					+ "Desktop\\Directory-Hoony\\file\\"
+					+ "serialization2.out");
+			
+			ObjectInputStream ojs = new ObjectInputStream(fi);
+			
+			Goods g11 = (Goods)ojs.readObject();
+			Goods g22 = (Goods)ojs.readObject();
+			
+			System.out.println(g11.item);
+			System.out.println(g11.price);
+			System.out.println(g11.shop);
+			System.out.println(g22.item);
+			System.out.println(g22.price);
+			System.out.println(g22.shop);
+			System.out.println(g11.toString());
+			System.out.println(g22.toString());
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		
+	}
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
